[UPD] create base card layout

--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,19 @@
     box-sizing: border-box;
 }
 
+.film-data {
+    border: 3px solid black;
+}
+
 /*layout*/
 
 .container {
     width: 800px;
     margin: 0 auto;
+}
+
+/*margin*/
+
+.mt-40 {
+    margin-top: 40px;
 }
