[UPD] import fontawensome icon Stars; convert the numerical Vote to Stars Vote

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@
     border: 3px solid black;
 }
 
+/*star style*/
+.full-star,
+.empty-star {
+    color: rgb(207, 177, 3);
+}
+
 /*layout*/
 
 .container {
